--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
