--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
