--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
+    "react-youtube": "^10.1.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
